--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url = jdbc:mysql://localhost:3306/myblog?useSSL=false&serverTimezone=UTC
+spring.datasource.username = root
+spring.datasource.password = root
 
+# hibernate properties
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+#hibernate ddl auto (create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
