--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url = jdbc:mysql://localhost:3306/myblog?useSSL=false&serverTimezone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3306/myblog?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username = root
-spring.datasource.password = root
+spring.datasource.password = Amsyar99
 
 # hibernate properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
